--- a/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase/HAL-VET6-CarBase.build_log.htm
+++ b/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase/HAL-VET6-CarBase.build_log.htm
@@ -21,18 +21,15 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.3.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-E:\VSWorkSpace\HAL-VET6-CarBase\MDK-ARM\HAL-VET6-CarBase.uvprojx
-Project File Date:  01/22/2025
+E:\GitHub\2025GongChuang\HAL-VET6-CarBase\MDK-ARM\HAL-VET6-CarBase.uvprojx
+Project File Date:  02/10/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'E:\Singlechip_Software\Keil_Arm6\ARM\ARMCLANG\Bin'
 Build target 'HAL-VET6-CarBase'
-compiling main.c...
-compiling usart.c...
-compiling Motor_CARBASE.c...
 compiling ROBOTIC_Arm.c...
 linking...
-Program Size: Code=23456 RO-data=772 RW-data=112 ZI-data=2920  
+Program Size: Code=23264 RO-data=804 RW-data=116 ZI-data=5420  
 FromELF: creating hex file...
 "HAL-VET6-CarBase\HAL-VET6-CarBase.axf" - 0 Error(s), 0 Warning(s).
 
