原料区调参完毕，底盘换新中

--- a/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase/HAL-VET6-CarBase.build_log.htm
+++ b/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase/HAL-VET6-CarBase.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 E:\GitHub\2025GongChuang\HAL-VET6-CarBase\MDK-ARM\HAL-VET6-CarBase.uvprojx
-Project File Date:  02/10/2025
+Project File Date:  02/18/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'E:\Singlechip_Software\Keil_Arm6\ARM\ARMCLANG\Bin'
 Build target 'HAL-VET6-CarBase'
-compiling ROBOTIC_Arm.c...
+compiling Motor_CARBASE.c...
 linking...
-Program Size: Code=23264 RO-data=804 RW-data=116 ZI-data=5420  
+Program Size: Code=24432 RO-data=708 RW-data=140 ZI-data=5444  
 FromELF: creating hex file...
 "HAL-VET6-CarBase\HAL-VET6-CarBase.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
