--- a/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase/HAL-VET6-CarBase.build_log.htm
+++ b/HAL-VET6-CarBase/MDK-ARM/HAL-VET6-CarBase/HAL-VET6-CarBase.build_log.htm
@@ -28,8 +28,11 @@ Project File Date:  03/02/2025
 *** Using Compiler 'V6.22', folder: 'E:\Singlechip_Software\Keil_Arm6\ARM\ARMCLANG\Bin'
 Build target 'HAL-VET6-CarBase'
 compiling usart.c...
+compiling ROBOTIC_Arm.c...
+compiling Motor_CARBASE.c...
+compiling main.c...
 linking...
-Program Size: Code=44576 RO-data=1192 RW-data=240 ZI-data=5496  
+Program Size: Code=43936 RO-data=1156 RW-data=212 ZI-data=5404  
 FromELF: creating hex file...
 "HAL-VET6-CarBase\HAL-VET6-CarBase.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +58,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:44
 </pre>
 </body>
 </html>
